  * When checking the username use the same regex as in user-setup,
    thanks Evan Dandrea
  * Properly sanitize host username to avoid UnicodeDecodeError (LP:
    #344151)
  * Uncompress all target subdirectories (LP: #359716)
  * If the target directory already exists, quit with an error message
    (LP: #364166)
  * Avoid non-ascii chars in username and volume name (lp: #365648)

  [ Hampus Wessman ]
  * Added a new metalink parser
  * Fixed the check for wine so that it looks in additonal places
  * Added tools/wine to the branch
  * Fixed a bug in virtualdisk.py
  * Added deletion of temporary directory
  * Fixed archive signature search in unpack.c
  * Removed some debugging code

  [ Evan Dandrea ]
  * Fixed a typo in the translation template.
  * Require adminstrator privileges (LP: #340400).  Thanks Agostino Russo!
  * os.environ is a dictionary, not a callable method.
  * Only uncompress files in the boot directory (LP: #341640).  Thanks Agostino
    Russo!
  * Call the correct bootloader installation method for each version of
    Windows.
  * Use registry.{get,set}_value not the nonexistent
    registry.{get,set}_key.
  * Fix typo where a bcdedit command was accidentally created using
    concatenation.
  * subprocess.Popen takes a list of string arguments.
  * Bcdedit requires absolute paths.
  * There's no need to quote arguments to commands when using Popen.  It
    passes them straight through, so you'll get "Ubuntu Linux" instead of
    Ubuntu Linux.
  * Removed an erroneous closing parentheses in the use_cd check.
  * Ignore any failure in delete_directory as it is just working with temporary
    directories.
  * Ensure that vista boot menu entry points to the correct wubildr file
    (LP: #358356)
  * Remove the /S flag from compact calls.  It forces compact to run
    against the current directory.

  [ Mario Limonciello ]
  * Update mythbuntu.preseed to use the latest strings available in
    ubiquity-frontend-mythbuntu.