@@ -149,7 +149,9 @@ class WindowsBackend(Backend):
             '\n\nNote that in verbose mode, the logs may include the password.' \
             '\n\nThe system will now reboot.')
         msg = msg % join_path(self.info.install_dir, 'installation-logs.zip')
-        replace_line_in_file(dest, 'msg=', "msg='%s'" % msg)
+        msg = "msg=\"%s\"" % msg
+        msg = str(msg.encode('utf8'))
+        replace_line_in_file(dest, 'msg=', msg)
         src = join_path(self.info.image_dir, self.info.distro.name + '.ico')
         dest = self.info.icon
         log.debug('Copying %s -> %s' % (src, dest))
@@ -330,21 +332,23 @@ class WindowsBackend(Backend):
 
     def get_windows_username(self):
         windows_username = os.getenv('username')
-        windows_username = windows_username.encode('ascii', 'ignore')
+        windows_username = windows_username.decode('ascii', 'ignore')
         log.debug('windows_username=%s' % windows_username)
         return windows_username
 
     def get_windows_user_full_name(self):
         user_full_name = os.getenv('username') #TBD
-        user_full_name = user_full_name.encode('ascii', 'ignore')
+        user_full_name = user_full_name.decode('ascii', 'ignore')
         log.debug('user_full_name=%s' % user_full_name)
         return user_full_name
 
     def get_windows_user_dir(self):
         homedrive = os.getenv('homedrive')
         homepath = os.getenv('homepath')
-        user_directory = join_path(homedrive, homepath)
-        user_directory = user_directory.encode('ascii', 'ignore')
+        user_directory = ""
+        if homedrive and homepath:
+            user_directory = join_path(homedrive, homepath)
+            user_directory = user_directory.decode('ascii', 'ignore')
         log.debug('user_directory=%s' % user_directory)
         return user_directory
 
