@@ -219,6 +219,13 @@ wubi (9.04) UNRELEASED; urgency=low
   * If the target directory already exists, quit with an error message
     (LP: #364166)
   * Avoid non-ascii chars in username and volume name (lp: #365648)
+  * Mixed up encode/decode str methods, again
+  * Encode unicode translations to avoid file write failures (LP:
+    #365642)
+  * Do not quit if there are ISO extraction problems, try to download
+    instead (LP: #371264)
+  * Do not quit if there are ISO info parsing errors due to file
+    corruption (LP: #366009)
 
   [ Hampus Wessman ]
   * Added a new metalink parser
@@ -260,4 +267,4 @@ wubi (9.04) UNRELEASED; urgency=low
   * Check for preseed.$(distro) in the data directory before assuming that
     preseed.lupin should be used. (LP: #359834)
 
- -- Agostino Russo <agostino.russo@gmail.com>  Tue, 05 May 2009 02:23:28 +0100
+ -- Agostino Russo <agostino.russo@gmail.com>  Thu, 07 May 2009 01:32:35 +0100
